[package]
name = "st7789"
description = "ST7789 TFT LCD driver with embedded-graphics support"
version = "0.2.3"
authors = ["Ales Katona <almindor@gmail.com>", "Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/almindor/st7789"
keywords = ["embedded-hal-driver", "st7789", "display"]
readme = "README.md"
documentation = "https://docs.rs/st7789"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.num-derive]
version = "0.3.0"
default-features = false

[dependencies.embedded-graphics]
optional = true
version = "0.6.1"

[dependencies.heapless]
optional = true
version = "0.5.4"

[features]
default = ["graphics", "batch", "buffer"]
graphics = ["embedded-graphics"]
batch = ["heapless"]
buffer = []